fixed missing color variables

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -1,4 +1,9 @@
 // custom syntax colors
+@very-light-gray: #c5c8c6;
+@light-gray: #969896;
+@gray: #373b41;
+@dark-gray: #282a2e;
+@very-dark-gray: #1d1f21;
 @syntax-color-orange: #E67E22;
 @syntax-color-light-orange: #F1C40F;
 @syntax-color-red: #E74C3C;
